SAK-27507 Syllabus Editable CSS causing layout issues
git-svn-id: https://source.sakaiproject.org/svn/syllabus/trunk@310885 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/syllabus/syllabus-app/src/webapp/syllabus/css/jqueryui-editable.css
+++ b/syllabus/syllabus-app/src/webapp/syllabus/css/jqueryui-editable.css
@@ -135,9 +135,6 @@
    opacity: 1;
 }
 
-.editable-pre-wrapped {
-   white-space: pre-wrap;
-}
 .editable-container.editable-popup {
     max-width: none !important; /* without this rule poshytip/tooltip does not stretch */
 }  
